feat: Java 26 showcase — sealed SayEvent hierarchy, virtual threads, code model
Add SayEvent sealed interface with 16 record subtypes as canonical demonstration
of Java 25/26 features. Every say* call maps to a typed SayEvent; every renderer
dispatches exhaustively via pattern matching switch — no visitor pattern, no defaults.

Key changes:
- SayEvent.java: sealed interface + 16 inner record types (TextEvent, SectionEvent,
  CodeEvent, TableEvent, JsonEvent, NoteEvent, WarningEvent, KeyValueEvent,
  UnorderedListEvent, OrderedListEvent, AssertionsEvent, CitationEvent,
  FootnoteEvent, RefEvent, RawEvent, CodeModelEvent)
- MultiRenderMachine.java: replace 20 sequential for-loops with dispatchToAll()
  using Executors.newVirtualThreadPerTaskExecutor() — concurrent multi-format output
- RenderMachineImpl.java: sayCodeModel(Class<?>) using guarded switch + reflection
  to render sealed hierarchy, record components, public method signatures
- RenderMachineCommands.java + RenderMachine.java: sayCodeModel() interface + default
- DocTester.java: sayCodeModel() delegation to renderMachine
- Java26ShowcaseTest.java: 7-test JavaOne 2027 showcase, one slide per feature

Java 26 features demonstrated in production code:
  sealed classes, records, pattern matching, virtual threads,
  unnamed patterns (_), sequenced collections, code model (Babylon stand-in)

https://claude.ai/code/session_01SoFt6Zp5wGegVSMVExTPDi